typo in index.html

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
             <div class="my-line"></div>
 
-            <h2> Send a credentials to the blockchain! </h2>
+            <h2> Send credentials to the blockchain! </h2>
             <input id="username" type="text" name="username" placeholder="username"/>
             <input id="password" type="text" name="password" placeholder="password"/>
             <button onclick="addPassword()">add password</button>
