--- a/index.html
+++ b/index.html
@@ -1,17 +1,72 @@
 <html>
-<script src="./bundle.js"></script>
-<script type="text/javascript">
+<head>
+    <script src="./bundle.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 
-</script>
+    <link href="css/starter-template.css" rel="stylesheet">
 
-<div>
-<input id="username" type="text" name="username" placeholder="username"/>
-<input id="password" type="text" name="password" placeholder="password"/>
-<button onclick="addPassword()">add password</button>
-<ul id="passwords">
-</ul>
-<br />
-<button onclick="loadPasswords()">load passwords</button>
-</div>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script type="text/javascript">
+    </script>
+</head>
+<body>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">CryptoPass</a>
+        </div>
+        <div id="navbar" class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
 
+    <div class="container">
+      <div class="starter-template">
+        <h1>CryptoPass</h1>
+        <p class="lead">Decentralized Password Management</p>
+      </div>
+
+        <div class="row">
+        <div class="col-md-3"></div>
+        <div class="col-md-3">
+        <div class="form-group">
+            <label for="username">username</label>
+            <input id="username" class="form-control" type="text" name="username" placeholder="username"/>
+        </div>
+        <div class="form-group">
+            <label for="password">password</label>
+            <input id="password" class="form-control" type="text" name="password" placeholder="password"/>
+        </div>
+        <div class="form-group">
+            <button onclick="addPassword()">add password</button>
+        </div>
+        <div class="form-group">
+            <button onclick="loadPasswords()">load passwords</button>
+        </div>
+        </div>
+        <div class="col-md-3"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-3"></div>
+            <div class="col-md-3">
+                <ul id="passwords"></ul>
+            </div>
+            <div class="col-md-3"></div>
+        </div>
+    </div><!-- /.container -->
+</body>
 </html>
