changed styling on index

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <ul class="list-unstyled components">
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="https://ethereum.org/">What is Ethereum?</a></li>
+                <li><a href="#">How it Works</a></li>
 
                 <li><!-- Link with dropdown items -->
                     <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false">Donate</a>
@@ -32,13 +33,15 @@
                         <li><a href="#">Donate Money!</a></li>
                         <li><a href="https://www.ethereum.org/donate">Donate to The Ethereum Project!</a></li>
                     </ul>
+
                 <li><a href="#">Contact</a></li>
             </ul>
             
         </nav>
         <div id="content">
 
-            <h2> Ethereum Password Manager </h2>
+            <h2> Store your passwords securely on the blockchain </h2>
+            <h4> Powered by Ethereum </h4>
             <p> Ethereum password manager is a brand new way to store passwords. No more storing passwords in insecure cloud locations with main stream apps. Store your passwords on the Ethereum blockchain with all the saftey and security that has revolutionized the world as we know it.</p>
 
             <div class="my-line"></div>
