wip, prototype, add react

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <script src="./bundle.js"></script>
+    <script src="/build/app.js"></script>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 
     <link href="css/starter-template.css" rel="stylesheet">
@@ -68,5 +68,6 @@
             <div class="col-md-3"></div>
         </div>
     </div><!-- /.container -->
+    <div id="reactroot"></div>
 </body>
 </html>
