--- a/cryptopass.html
+++ b/cryptopass.html
@@ -1,78 +1,95 @@
 <html>
-<head>
+  <head>
     <script src="/build/app.js"></script>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
-
-    <link href="css/starter-template.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/custom.css" />
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script type="text/javascript">
     </script>
-</head>
-<body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">CryptoPass</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
-
+    <style>
+    </style>
+  </head>
+  <body>
     <div class="container">
-        <br/>
-        <div class="row">
-          <div class="col-md-12"><h1>CryptoPass</h1></div>
+      <div class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+          <div class="navbar-header">
+            <a href="../" class="navbar-brand">cryptopass</a>
+            <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+          </div>
+          <div class="navbar-collapse collapse" id="navbar-main">
+            <ul class="nav navbar-nav">
+              <li>
+                <a href="../help/">Help</a>
+              </li>
+              <li>
+                <a href="http://news.bootswatch.com">Blog</a>
+              </li>
+              <li class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="download">Cosmo <span class="caret"></span></a>
+                <ul class="dropdown-menu" aria-labelledby="download">
+                  <li><a href="http://jsfiddle.net/bootswatch/h3fgn55j/">Open Sandbox</a></li>
+                  <li class="divider"></li>
+                  <li><a href="./bootstrap.min.css">bootstrap.min.css</a></li>
+                  <li><a href="./bootstrap.css">bootstrap.css</a></li>
+                  <li class="divider"></li>
+                  <li><a href="./variables.less">variables.less</a></li>
+                  <li><a href="./bootswatch.less">bootswatch.less</a></li>
+                  <li class="divider"></li>
+                  <li><a href="./_variables.scss">_variables.scss</a></li>
+                  <li><a href="./_bootswatch.scss">_bootswatch.scss</a></li>
+                </ul>
+              </li>
+            </ul>
+
+            <ul class="nav navbar-nav navbar-right">
+              <li><a href="http://builtwithbootstrap.com/" target="_blank">1337</a></li>
+            </ul>
+
+          </div>
         </div>
-        <br/>
+      </div>
 
-        <br/>
-
-        <div class="row">
-          <div class="col-md-4">
-
-            <table class="table"><!--<caption>Passwords</caption>-->
-              <thead>
-                <tr>
-                  <th>#</th><th>Name</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr><th scope="row">1</th> <td>kevinjb465@gmail.com</td> </tr>
-                <tr> <th scope="row">2</th> <td>kjb@fastmail.com</td> </tr>
-                <tr> <th scope="row">3</th> <td>amazon</td> </tr>
-                <tr> <th scope="row">3</th> <td>web3</td> </tr>
-                <tr> <th scope="row"></th> <td><button class="btn btn-primary">+ Add Password</button></td> </tr>
-              </tbody>
-            </table>
+      <br/>
 
 
+      <div class="row">
+        <div class="col-md-4 bg-light fill-vertical">
+          <div class="bg-primary"><p>test</p></div>
+          <table class="table">
+            <thead>
+              <tr>
+                <th>#</th><th>Name</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr><th scope="row">1</th> <td>lol@gmail.com</td> </tr>
+              <tr> <th scope="row">2</th> <td>lol@fastmail.com</td> </tr>
+              <tr> <th scope="row">3</th> <td>amazon</td> </tr>
+              <tr> <th scope="row">3</th> <td>web3</td> </tr>
+              <tr> <th scope="row"></th> <td><button class="btn btn-default">+ Add Password</button></td> </tr>
+            </tbody>
+          </table>
+
+        </div>
+        <div class="col-md-8">
+          <div class="text-center"><p><strong>email</strong>: lol@gmail.com</p></div>
+          <div class="text-center"><p><strong>password</strong>: <a href="#">click to show</a> | <a href="#">click to copy</a></p></div>
+          <div class="text-center"><p><strong>Created</strong>: Nov 1 2017</p></div>
+          <div class="text-center"><p><strong>Last Modified:</strong> Nov 1 2017</p></div>
+          <div class="text-center">
+            <button class="btn btn-default">Update</button>
+            <button class="btn btn-danger">Delete</button>
           </div>
-          <div class="col-md-8">
-            <div class="text-center"><p><strong>email</strong>: kevinjb465@gmail.com</p></div>
-            <div class="text-center"><p><strong>password</strong>: <a href="#">click to show</a> | <a href="#">click to copy</a></p></div>
-            <div class="text-center"><p><strong>Created</strong>: Nov 1 2017</p></div>
-            <div class="text-center"><p><strong>Last Modified:</strong> Nov 1 2017</p></div>
-            <div class="text-center">
-              <button class="btn btn-default">Update</button>
-              <button class="btn btn-danger">Delete</button>
-            </div>
 
-          </div>
+        </div>
 
         <br />
         <br />
@@ -80,44 +97,44 @@
         <div class="row">
           <div class="col-md-12">
             <div class="text-center">
-            <button class="btn btn-primary btn-lg disabled">Sync to blockchain</button>
+              <button class="btn btn-primary btn-lg disabled">Sync to blockchain</button>
             </div>
           </div>
         </div>
-        </div>
+      </div>
 
-<!--
+      <!--
         <div class="row">
         <div class="col-md-3"></div>
         <div class="col-md-3">
         <div class="form-group">
-            <label for="username">username</label>
-            <input id="username" class="form-control" type="text" name="username" placeholder="username"/>
+        <label for="username">username</label>
+        <input id="username" class="form-control" type="text" name="username" placeholder="username"/>
         </div>
         <div class="form-group">
-            <label for="password">password</label>
-            <input id="password" class="form-control" type="text" name="password" placeholder="password"/>
+        <label for="password">password</label>
+        <input id="password" class="form-control" type="text" name="password" placeholder="password"/>
         </div>
         <div class="form-group">
-            <button onclick="addPassword()">add password</button>
+        <button onclick="addPassword()">add password</button>
         </div>
         <div class="form-group">
-            <button onclick="loadPasswords()">load passwords</button>
+        <button onclick="loadPasswords()">load passwords</button>
         </div>
         </div>
         <div class="col-md-3"></div>
         </div>
 
         <div class="row">
-            <div class="col-md-3"></div>
-            <div class="col-md-3">
-                <ul id="passwords"></ul>
-            </div>
-            <div class="col-md-3"></div>
+        <div class="col-md-3"></div>
+        <div class="col-md-3">
+        <ul id="passwords"></ul>
         </div>
-    -->
+        <div class="col-md-3"></div>
+        </div>
+      -->
     </div><!-- /.container -->
     <div id="reactroot"></div>
-</body>
+  </body>
 </html>
 
