--- a/cryptopass.html
+++ b/cryptopass.html
@@ -62,21 +62,46 @@
 
       <div class="row">
         <div class="col-md-4 bg-light fill-vertical">
-          <div class="bg-primary"><p>test</p></div>
+        <br />
+        <br />
+        <br />
+          
+        <div><input type="text" class="form-control" placeholder="search"/></div>
+        <br />
+
           <table class="table">
-            <thead>
-              <tr>
-                <th>#</th><th>Name</th>
-              </tr>
-            </thead>
             <tbody>
-              <tr><th scope="row">1</th> <td>lol@gmail.com</td> </tr>
-              <tr> <th scope="row">2</th> <td>lol@fastmail.com</td> </tr>
-              <tr> <th scope="row">3</th> <td>amazon</td> </tr>
-              <tr> <th scope="row">3</th> <td>web3</td> </tr>
-              <tr> <th scope="row"></th> <td><button class="btn btn-default">+ Add Password</button></td> </tr>
+
+              <tr><th scope="row"></th>
+                <td>
+                  <p class="nomargin"><strong>gmail</strong></p>
+                  <p class="text-muted nomargin">lol@gmail.com</p>
+                </td>
+              </tr>
+              <tr class="bg-dark">
+                <th scope="row"></th>
+                <td>
+                  <p class="nomargin"><strong>fastmail</strong></p>
+                  <p class="text-muted nomargin">lol@fastmail.com</p>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row"></th>
+                <td>
+                  <p class="nomargin"><strong>placeholder</strong></p>
+                  <p class="text-muted nomargin">lol@placeholder.com</p>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row"></th>
+                <td>
+                  <p class="nomargin"><strong>new</strong></p>
+                  <p class="text-muted nomargin">memes@memes.com</p>
+                </td>
+              </tr>
             </tbody>
           </table>
+
 
         </div>
         <div class="col-md-8">
