side pane looks ok now

--- a/cryptopass.html
+++ b/cryptopass.html
@@ -13,8 +13,7 @@
     </style>
   </head>
   <body>
-    <div class="container">
-      <div class="navbar navbar-default navbar-fixed-top">
+      <div class="navbar navbar-default navbar-static-top" style="margin-bottom: 0px;">
         <div class="container">
           <div class="navbar-header">
             <a href="../" class="navbar-brand">cryptopass</a>
@@ -56,19 +55,12 @@
           </div>
         </div>
       </div>
-
-      <br/>
-
-
+    <div class="container">
       <div class="row">
         <div class="col-md-4 bg-light fill-vertical">
-        <br />
-        <br />
-        <br />
-          
-        <div><input type="text" class="form-control" placeholder="search"/></div>
-        <br />
-
+          <br />
+          <div><input type="text" class="form-control" placeholder="search"/></div>
+          <br />
           <table class="table">
             <tbody>
 
@@ -101,8 +93,6 @@
               </tr>
             </tbody>
           </table>
-
-
         </div>
         <div class="col-md-8">
           <div class="text-center"><p><strong>email</strong>: lol@gmail.com</p></div>
