--- a/cryptopass.html
+++ b/cryptopass.html
@@ -57,7 +57,7 @@
       </div>
     <div class="container">
       <div class="row">
-        <div class="col-md-4 bg-light fill-vertical">
+        <div class="col-xs-4 bg-light fill-vertical">
           <br />
           <div><input type="text" class="form-control" placeholder="search"/></div>
           <br />
@@ -94,34 +94,59 @@
             </tbody>
           </table>
         </div>
-        <div class="col-md-8">
-          <div class="text-center"><p><strong>email</strong>: lol@gmail.com</p></div>
-          <div class="text-center"><p><strong>password</strong>: <a href="#">click to show</a> | <a href="#">click to copy</a></p></div>
-          <div class="text-center"><p><strong>Created</strong>: Nov 1 2017</p></div>
-          <div class="text-center"><p><strong>Last Modified:</strong> Nov 1 2017</p></div>
-          <div class="text-center">
-            <button class="btn btn-default">Update</button>
-            <button class="btn btn-danger">Delete</button>
+        <div class="col-xs-8">
+          <br />
+          <div class="container">
+            <div class="row">
+              <div class="col-xs-1"></div>
+              <div class="col-xs-11">
+                <div class="">
+                  <button class="btn btn-default">+ add password</button>
+                  <button class="btn btn-default">+ sync to blockchain</button>
+                  <button class="btn btn-default">+ download your data</button>
+                </div>
+              </div>
+             </div>
           </div>
 
-        </div>
+          <h2 class="text-center">fastmail</h2>
 
-        <br />
-        <br />
-
-        <div class="row">
-          <div class="col-md-12">
-            <div class="text-center">
-              <button class="btn btn-primary btn-lg disabled">Sync to blockchain</button>
+          <div class="container">
+            <div class="row">
+              <div class="col-xs-1"></div>
+              <div class="col-xs-2 text-right">
+                <p><strong>username or email</strong></p>
+                <p><strong>password</strong></p>
+                <p><strong>created on</strong></p>
+                <p><strong>modified on</strong></p>
+                <p><strong>notes</strong></p>
+              </div>
+              <div class="col-xs-9">
+                <p>memes@memes.com</p>
+                <p>nyancat</p>
+                <p>nov 1 2017</p>
+                <p>nov 1 2017</p>
+                <p>
+                some notes here
+                </p>
+              </div>
             </div>
+          </div>
+
+          <br />
+
+          <div class="text-center">
+            <button class="btn btn-default">update</button>
+            <button class="btn btn-danger">delete</button>
           </div>
         </div>
       </div>
+    </div>
 
       <!--
         <div class="row">
-        <div class="col-md-3"></div>
-        <div class="col-md-3">
+        <div class="col-xs-3"></div>
+        <div class="col-xs-3">
         <div class="form-group">
         <label for="username">username</label>
         <input id="username" class="form-control" type="text" name="username" placeholder="username"/>
@@ -137,15 +162,15 @@
         <button onclick="loadPasswords()">load passwords</button>
         </div>
         </div>
-        <div class="col-md-3"></div>
+        <div class="col-xs-3"></div>
         </div>
 
         <div class="row">
-        <div class="col-md-3"></div>
-        <div class="col-md-3">
+        <div class="col-xs-3"></div>
+        <div class="col-xs-3">
         <ul id="passwords"></ul>
         </div>
-        <div class="col-md-3"></div>
+        <div class="col-xs-3"></div>
         </div>
       -->
     </div><!-- /.container -->
