--- a/cryptopass.html
+++ b/cryptopass.html
@@ -13,51 +13,51 @@
     </style>
   </head>
   <body>
-      <div class="navbar navbar-default navbar-static-top" style="margin-bottom: 0px;">
-        <div class="container">
-          <div class="navbar-header">
-            <a href="../" class="navbar-brand">cryptopass</a>
-            <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-          </div>
-          <div class="navbar-collapse collapse" id="navbar-main">
-            <ul class="nav navbar-nav">
-              <li>
-                <a href="../help/">Help</a>
-              </li>
-              <li>
-                <a href="http://news.bootswatch.com">Blog</a>
-              </li>
-              <li class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="download">Cosmo <span class="caret"></span></a>
-                <ul class="dropdown-menu" aria-labelledby="download">
-                  <li><a href="http://jsfiddle.net/bootswatch/h3fgn55j/">Open Sandbox</a></li>
-                  <li class="divider"></li>
-                  <li><a href="./bootstrap.min.css">bootstrap.min.css</a></li>
-                  <li><a href="./bootstrap.css">bootstrap.css</a></li>
-                  <li class="divider"></li>
-                  <li><a href="./variables.less">variables.less</a></li>
-                  <li><a href="./bootswatch.less">bootswatch.less</a></li>
-                  <li class="divider"></li>
-                  <li><a href="./_variables.scss">_variables.scss</a></li>
-                  <li><a href="./_bootswatch.scss">_bootswatch.scss</a></li>
-                </ul>
-              </li>
-            </ul>
+    <div class="navbar navbar-default navbar-static-top" style="margin-bottom: 0px;">
+      <div class="container">
+        <div class="navbar-header">
+          <a href="../" class="navbar-brand">cryptopass</a>
+          <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+        </div>
+        <div class="navbar-collapse collapse" id="navbar-main">
+          <ul class="nav navbar-nav">
+            <li>
+              <a href="../help/">Help</a>
+            </li>
+            <li>
+              <a href="http://news.bootswatch.com">Blog</a>
+            </li>
+            <li class="dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="download">Cosmo <span class="caret"></span></a>
+              <ul class="dropdown-menu" aria-labelledby="download">
+                <li><a href="http://jsfiddle.net/bootswatch/h3fgn55j/">Open Sandbox</a></li>
+                <li class="divider"></li>
+                <li><a href="./bootstrap.min.css">bootstrap.min.css</a></li>
+                <li><a href="./bootstrap.css">bootstrap.css</a></li>
+                <li class="divider"></li>
+                <li><a href="./variables.less">variables.less</a></li>
+                <li><a href="./bootswatch.less">bootswatch.less</a></li>
+                <li class="divider"></li>
+                <li><a href="./_variables.scss">_variables.scss</a></li>
+                <li><a href="./_bootswatch.scss">_bootswatch.scss</a></li>
+              </ul>
+            </li>
+          </ul>
 
-            <ul class="nav navbar-nav navbar-right">
-              <li><a href="http://builtwithbootstrap.com/" target="_blank">1337</a></li>
-            </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="http://builtwithbootstrap.com/" target="_blank">1337</a></li>
+          </ul>
 
-          </div>
         </div>
       </div>
+    </div>
     <div class="container">
       <div class="row">
-        <div class="col-xs-4 bg-light fill-vertical">
+        <div class="col-xs-4 bg-light fill-vertical shadow">
           <br />
           <div><input type="text" class="form-control" placeholder="search"/></div>
           <br />
@@ -91,6 +91,13 @@
                   <p class="text-muted nomargin">memes@memes.com</p>
                 </td>
               </tr>
+              <tr>
+                <th scope="row"></th>
+                <td>
+                  <p class="nomargin"><strong>new</strong></p>
+                  <p class="text-muted nomargin">memes@memes.com</p>
+                </td>
+              </tr>
             </tbody>
           </table>
         </div>
@@ -108,6 +115,8 @@
               </div>
              </div>
           </div>
+
+          <br />
 
           <h2 class="text-center">fastmail</h2>
 
