--- a/index.html
+++ b/index.html
@@ -1,73 +1,92 @@
 <html>
-<head>
+  <head>
     <script src="/build/app.js"></script>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
-
-    <link href="css/starter-template.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/custom.css" />
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script type="text/javascript">
     </script>
-</head>
-<body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <style>
+    </style>
+  </head>
+  <body>
+    <div class="navbar navbar-default navbar-static-top" style="margin-bottom: 0px;">
       <div class="container">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
+          <a href="../" class="navbar-brand">cryptopass</a>
+          <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">CryptoPass</a>
         </div>
-        <div id="navbar" class="collapse navbar-collapse">
+        <div class="navbar-collapse collapse" id="navbar-main">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li>
+              <a href="../help/">Help</a>
+            </li>
+            <li>
+              <a href="http://news.bootswatch.com">Blog</a>
+            </li>
+            <li class="dropdown">
+              <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="download">Cosmo <span class="caret"></span></a>
+              <ul class="dropdown-menu" aria-labelledby="download">
+                <li><a href="http://jsfiddle.net/bootswatch/h3fgn55j/">Open Sandbox</a></li>
+                <li class="divider"></li>
+                <li><a href="./bootstrap.min.css">bootstrap.min.css</a></li>
+                <li><a href="./bootstrap.css">bootstrap.css</a></li>
+                <li class="divider"></li>
+                <li><a href="./variables.less">variables.less</a></li>
+                <li><a href="./bootswatch.less">bootswatch.less</a></li>
+                <li class="divider"></li>
+                <li><a href="./_variables.scss">_variables.scss</a></li>
+                <li><a href="./_bootswatch.scss">_bootswatch.scss</a></li>
+              </ul>
+            </li>
           </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
 
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="http://builtwithbootstrap.com/" target="_blank">1337</a></li>
+          </ul>
+
+        </div>
+      </div>
+    </div>
     <div class="container">
-      <div class="starter-template">
-        <h1>CryptoPass</h1>
-        <p class="lead">Decentralized Password Management</p>
+      <div class="row">
+        <div class="col-xs-4 bg-light fill-vertical shadow">
+          <!-- react sidebar -->
+          <div id="sidebar"></div>
+          <!-- end react sidebar -->
+        </div>
+        <div class="col-xs-8">
+          <br />
+          <div class="container">
+            <div class="row">
+              <div class="col-xs-1"></div>
+              <div class="col-xs-11">
+
+                <!-- react actionbuttons -->
+                <div id="actionbuttons"></div>
+                <!-- end react actionbuttons -->
+
+              </div>
+             </div>
+          </div>
+
+          <br />
+
+          <!-- react centerpane -->
+          <div id="centerpane"></div>
+          <!-- end react centerpane -->
+
+        </div>
       </div>
-
-        <div class="row">
-        <div class="col-md-3"></div>
-        <div class="col-md-3">
-        <div class="form-group">
-            <label for="username">username</label>
-            <input id="username" class="form-control" type="text" name="username" placeholder="username"/>
-        </div>
-        <div class="form-group">
-            <label for="password">password</label>
-            <input id="password" class="form-control" type="text" name="password" placeholder="password"/>
-        </div>
-        <div class="form-group">
-            <button onclick="addPassword()">add password</button>
-        </div>
-        <div class="form-group">
-            <button onclick="loadPasswords()">load passwords</button>
-        </div>
-        </div>
-        <div class="col-md-3"></div>
-        </div>
-
-        <div class="row">
-            <div class="col-md-3"></div>
-            <div class="col-md-3">
-                <ul id="passwords"></ul>
-            </div>
-            <div class="col-md-3"></div>
-        </div>
+    </div>
     </div><!-- /.container -->
-    <div id="reactroot"></div>
-</body>
+  </body>
 </html>
+
