--- a/index.html
+++ b/index.html
@@ -56,37 +56,8 @@
       </div>
     </div>
     <div class="container">
-      <div class="row">
-        <div class="col-xs-4 bg-light fill-vertical shadow">
-          <!-- react sidebar -->
-          <div id="sidebar"></div>
-          <!-- end react sidebar -->
-        </div>
-        <div class="col-xs-8">
-          <br />
-          <div class="container">
-            <div class="row">
-              <div class="col-xs-1"></div>
-              <div class="col-xs-11">
-
-                <!-- react actionbuttons -->
-                <div id="actionbuttons"></div>
-                <!-- end react actionbuttons -->
-
-              </div>
-             </div>
-          </div>
-
-          <br />
-
-          <!-- react centerpane -->
-          <div id="centerpane"></div>
-          <!-- end react centerpane -->
-
-        </div>
-      </div>
+        <div id="app"></div>
     </div>
-    </div><!-- /.container -->
   </body>
 </html>
 
